--- a/mappingservice/southbound/pom.xml
+++ b/mappingservice/southbound/pom.xml
@@ -18,6 +18,19 @@
     <odlparent.spotbugs.enforce>false</odlparent.spotbugs.enforce>
   </properties>
 
+  <!-- Required for JMock -->
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-bom</artifactId>
+        <version>4.11.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.osgi</groupId>
