--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -52,12 +52,18 @@
       <dependency>
         <groupId>org.jmock</groupId>
         <artifactId>jmock</artifactId>
-        <version>2.6.0</version>
+        <version>2.12.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.jmock</groupId>
         <artifactId>jmock-legacy</artifactId>
-        <version>2.6.0</version>
+        <version>2.12.0</version>
       </dependency>
       <dependency>
         <groupId>org.opendaylight.controller</groupId>
