Fix JMock execution
jacoco-0.8.9+ is exposing the fact we need java.base open to cglib.
Downgrade jacoco to keep the accident working.

Change-Id: I7bc9c4cbcd4381395e1d0da0804bc38f1909fe45
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/mappingservice/southbound/pom.xml
+++ b/mappingservice/southbound/pom.xml
@@ -16,6 +16,8 @@
 
   <properties>
     <odlparent.spotbugs.enforce>false</odlparent.spotbugs.enforce>
+    <!-- FIXME: needed to get cglib working -->
+    <jacoco.version>0.8.8</jacoco.version>
   </properties>
 
   <dependencies>
