--- a/mappingservice/dsbackend/pom.xml
+++ b/mappingservice/dsbackend/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>mappingservice.lisp-proto</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-binding-api</artifactId>
     </dependency>
