--- a/features/odl-lispflowmapping-southbound/pom.xml
+++ b/features/odl-lispflowmapping-southbound/pom.xml
@@ -24,18 +24,35 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
        build failure. Please do not modify this unless you have a good reason. -->
   <name>ODL :: lispflowmapping :: ${project.artifactId}</name>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>controller-artifacts</artifactId>
+        <version>8.0.1</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.opendaylight.netconf</groupId>
+        <artifactId>netconf-artifacts</artifactId>
+        <version>6.0.2</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
-      <groupId>org.opendaylight.netconf</groupId>
-      <artifactId>odl-restconf</artifactId>
-      <version>6.0.2</version>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>odl-mdsal-broker</artifactId>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
-      <artifactId>odl-mdsal-broker</artifactId>
-      <version>8.0.1</version>
+      <groupId>org.opendaylight.netconf</groupId>
+      <artifactId>odl-restconf</artifactId>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
