--- a/mappingservice/implementation/pom.xml
+++ b/mappingservice/implementation/pom.xml
@@ -90,6 +90,10 @@
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-singleton-dom-impl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.lispflowmapping</groupId>
+      <artifactId>mappingservice.southbound</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
