--- a/mappingservice/implementation/pom.xml
+++ b/mappingservice/implementation/pom.xml
@@ -84,11 +84,11 @@
     <!-- needed for osgi console -->
     <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
-      <artifactId>mdsal-singleton-common-api</artifactId>
+      <artifactId>mdsal-singleton-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
-      <artifactId>mdsal-singleton-dom-impl</artifactId>
+      <artifactId>mdsal-singleton-impl</artifactId>
     </dependency>
   </dependencies>
 
