WIP: Bump upstreams for 2024.09 Scandium
Adopt:
- odlparent-14.0.2
- infrautils-7.0.2
- yangtools-14.0.2
- mdsal-14.0.1
- controller-10.0.1
- aaa-0.20.0
- netconf-8.0.0-SNAPSHOT

Change-Id: I8398a19b1f4d7ed36210cb7c24bbef6de826f37f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/mappingservice/southbound/pom.xml
+++ b/mappingservice/southbound/pom.xml
@@ -73,6 +73,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.14.18</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-singleton-api</artifactId>
     </dependency>
