--- a/features/pom.xml
+++ b/features/pom.xml
@@ -24,6 +24,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
        build failure. Please do not modify this unless you have a good reason. -->
   <name>ODL :: lispflowmapping :: ${project.artifactId}</name>
 
+  <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.install.skip>true</maven.install.skip>
+  </properties>
+
   <modules>
     <module>odl-lispflowmapping-models</module>
     <module>odl-lispflowmapping-inmemorydb</module>
