--- a/features/odl-lispflowmapping-models/pom.xml
+++ b/features/odl-lispflowmapping-models/pom.xml
@@ -27,9 +27,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.opendaylight.mdsal</groupId>
-        <artifactId>mdsal-artifacts</artifactId>
-        <version>14.0.18</version>
+        <groupId>org.opendaylight.ietf</groupId>
+        <artifactId>ietf-artifacts</artifactId>
+        <version>1.0.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -44,8 +44,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <classifier>features</classifier>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.mdsal.model</groupId>
-      <artifactId>odl-mdsal-model-rfc6991</artifactId>
+      <groupId>org.opendaylight.ietf</groupId>
+      <artifactId>odl-ietf-model-rfc6991</artifactId>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
