--- a/features/odl-lispflowmapping-southbound/pom.xml
+++ b/features/odl-lispflowmapping-southbound/pom.xml
@@ -29,14 +29,14 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <dependency>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>controller-artifacts</artifactId>
-        <version>11.0.2</version>
+        <version>12.0.0</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.opendaylight.netconf</groupId>
         <artifactId>netconf-artifacts</artifactId>
-        <version>9.0.1</version>
+        <version>10.0.0-SNAPSHOT</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
